--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+    <title>QuizzaHut App</title>
   </head>
   <body>
     <div id="root"></div>
